--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "cheerio": "^1.0.0-rc.12",
+    "csvtojson": "^2.0.10",
     "iconv-lite": "^0.6.3",
     "luxon": "^3.0.3",
     "numeral": "^2.0.6",
