--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "numeral": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "yahoo-finance2": "^2.3.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
