--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cheerio": "^1.0.0-rc.12",
     "csvtojson": "^2.0.10",
     "iconv-lite": "^0.6.3",
+    "lodash": "^4.17.21",
     "luxon": "^3.0.3",
     "numeral": "^2.0.6",
     "reflect-metadata": "^0.1.13",
@@ -41,6 +42,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
+    "@types/lodash": "^4.14.185",
     "@types/luxon": "^3.0.0",
     "@types/node": "^16.0.0",
     "@types/numeral": "^2.0.2",
