chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
   "dependencies": {
     "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^8.0.0",
     "cheerio": "^1.0.0-rc.12",
     "csvtojson": "^2.0.10",
     "iconv-lite": "^0.6.3",
     "lodash": "^4.17.21",
     "luxon": "^3.0.3",
+    "mongoose": "^6.6.1",
     "numeral": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
