--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/schedule": "^2.1.0",
     "cheerio": "^1.0.0-rc.12",
     "csvtojson": "^2.0.10",
+    "exceljs": "^4.3.0",
     "iconv-lite": "^0.6.3",
     "lodash": "^4.17.21",
     "luxon": "^3.0.3",
