--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^2.2.0",
@@ -35,6 +36,7 @@
     "lodash": "^4.17.21",
     "luxon": "^3.0.3",
     "mongoose": "^6.6.1",
+    "nodemailer": "^6.7.8",
     "numeral": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -51,6 +53,7 @@
     "@types/lodash": "^4.14.185",
     "@types/luxon": "^3.0.0",
     "@types/node": "^16.0.0",
+    "@types/nodemailer": "^6.4.6",
     "@types/numeral": "^2.0.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
