feat(scraper): add mailer module

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 MONGODB_URI=
 SCRAPER_INIT=
+
+GOOGLE_USER=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_ACCESS_TOKEN=
+GOOGLE_REFRESH_TOKEN=
+MAILER_FROM=
+MAILER_TO=
