--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "technicalindicators": "^3.1.0",
     "yahoo-finance2": "^2.3.6"
   },
   "devDependencies": {
