chore(monitor): setup app module

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 MONGODB_URI=
-SCRAPER_INIT=
+REDIS_URL=
 
 GOOGLE_USER=
 GOOGLE_CLIENT_ID=
@@ -8,3 +8,7 @@ GOOGLE_ACCESS_TOKEN=
 GOOGLE_REFRESH_TOKEN=
 MAILER_FROM=
 MAILER_TO=
+
+LINE_NOTIFY_ACCESS_TOKEN=
+
+SCRAPER_INIT=
