--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "test:e2e": "jest --config ./apps/scraper/test/jest-e2e.json"
   },
   "dependencies": {
+    "@fugle/realtime": "^0.3.4",
+    "@fugle/realtime-nest": "^0.3.1",
     "@liaoliaots/nestjs-redis": "^8.2.2",
     "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/axios": "^0.1.0",
