--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/schedule": "^2.1.0",
     "cheerio": "^1.0.0-rc.12",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "csvtojson": "^2.0.10",
     "exceljs": "^4.3.0",
     "iconv-lite": "^0.6.3",
