--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "luxon": "^3.0.3",
     "mongoose": "^6.6.1",
     "nest-line-notify": "^0.1.0",
+    "nestjs-ip-filter": "^0.2.0",
     "nodemailer": "^6.7.8",
     "numeral": "^2.0.6",
     "reflect-metadata": "^0.1.13",
