chore: .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 MONGODB_URI=
-REDIS_URL=
+REDIS_HOST=
+REDIS_PORT=
 
 GOOGLE_USER=
 GOOGLE_CLIENT_ID=
@@ -10,5 +11,16 @@ MAILER_FROM=
 MAILER_TO=
 
 LINE_NOTIFY_ACCESS_TOKEN=
+FUGLE_REALTIME_API_TOKEN=
+
+FUGLE_TRADE_CERT_PATH=
+FUGLE_TRADE_API_URL=
+FUGLE_TRADE_API_KEY=
+FUGLE_TRADE_API_SECRET=
+FUGLE_TRADE_AID=
+FUGLE_TRADE_PASSWORD=
+FUGLE_TRADE_CERT_PASS=
+
+ALLOWED_IPS=
 
 SCRAPER_INIT=
